# certbot-dns-njalla

./: .gitignore  README.md  generate-snapcraft-yml.sh  generate-snapcraft.sh  generate_dnsplugins_snapcraft.sh  pyproject.toml  setup.py
.github/: FUNDING.yml
certbot_dns_njalla/: dns_njalla.py  dns_njalla_test.py
snap/: snapcraft.yaml
