[project]
name = "certbot-dns-njalla"
version = "2.0.2"
authors = [{ name = "chaptergy" }]
license = {file = "LICENSE"}
description = "Njalla DNS Authenticator plugin for Certbot"
readme = "README.md"
keywords = ["certbot", "njalla", "dns", "certificate", "SSL", "TLS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "certbot >= 3.0.0",
    "dns-lexicon >= 3.14.1",
]

[project.optional-dependencies]
test = [
    "mock",
    "requests",
]

[project.urls]
Repository = "https://github.com/chaptergy/certbot-dns-njalla.git"

[project.entry-points."certbot.plugins"]
dns-njalla = "certbot_dns_njalla.dns_njalla:Authenticator"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Find packages automatically

